[project]
name = "uv-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jax>=0.5.3",
    "numpy>=2.2.4",
    "ooo-dev-tools>=0.53.3",
    "pandas>=2.2.3",
    "polars>=1.27.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scikit-plots>=0.4.0rc2",
    "tensor>=0.3.6",
]

[tool.uv]
upgrade = true

[tool.mypy]
allow_redefinition = false
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
local_partial_types = true
no_implicit_optional = true
python_version = 3.13
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[dependency-groups]
dev = [
    "annotated-types>=0.6.0",
    "bandit>=1.7.5",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "ipython>=9.1.0",
    "isort>=5.12.0",
    "mypy-extensions>=1.0.0",
    "mypy>=1.7.1",
    "pyflakes>=3.1.0",
    "pylama>=8.4.1",
    "pylint>=3.0.2",
    "ruff>=0.11.0",
    "semgrep>=1.95.0",
    "types-requests>=2.32.0",
    "typing_extensions>=4.7.1",
]
